@@ -1,4 +1,5 @@
 2.2.5
+ * Make JSON date formatter thread-safe (CASSANDRA-10814)
  * Fix regression in split size on CqlInputFormat (CASSANDRA-10835)
  * Better handling of SSL connection errors inter-node (CASSANDRA-10816)
  * Disable reloading of GossipingPropertyFileSnitch (CASSANDRA-9474)
